--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 	<body>
 		<div id="root"></div>
 	</body>
-	<script
+	<!-- <script
 		crossorigin
 		src="https://unpkg.com/react@18/umd/react.development.js"></script>
 	<script
 		crossorigin
-		src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
-	<script>
+		src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script> -->
+	<script type="module">
+		import React from "react";
+		import ReactDOM from "React-dom/client";
 		const heading = React.createElement(
 			'div',
 			{ id: 'parent' },
